@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor LOGIC_COLOR
skinparam classBackgroundColor LOGIC_COLOR

package "Logic" as LogicPackage {
    class LogicManager

    package "Parser" as ParserPackage {
        class AddressBookParser
        interface AliasProvider
    }
}

package "Model" as ModelPackage {
    interface Model
    class ModelManager
}


LogicManager --> AddressBookParser


AddressBookParser ..> AliasProvider

Model .up.|> AliasProvider

ModelManager .up.|> Model

@enduml
